# gitlib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a.txt  build.sh  core_tcp_client.30297  format_all.sh  main.cpp  main.cxx  readme.txt  tcp_client.cpp  tcp_client.h  test_build.sh
.cursor/rules/: rules.general.mdc
hooks/: install-hooks.sh  pre-commit
include/: tcp_client.h
src/: main.cpp  server.cpp  tcp_client.cpp
tests/: test_tcp_client.cpp
